--- a/latex/ch6.tex
+++ b/latex/ch6.tex
@@ -45,10 +45,10 @@ They are split across the following projects:
 		NSGT/sliCQT PyTorch copy from sections \ref{sec:torchslicq} and \ref{sec:improvelib}\\
 		\url{https://github.com/sevagh/nsgt}
 	\item
-		museval (BSS metrics evaluation) CuPy copy from section \ref{sec:fasterbsscupy}:\\
+		museval (BSS metrics evaluation) CuPy copy from Section \ref{sec:fasterbsscupy}:\\
 		\url{https://github.com/sevagh/sigsep-mus-eval}
 	\item
-		xumx-sliCQ neural network from section \ref{sec:neuralnet}:\\
+		xumx-sliCQ neural network from Section \ref{sec:neuralnet}:\\
 		\url{https://github.com/sevagh/xumx-sliCQ}
 	\item
 		LaTeX files and scripts for generating this thesis, including all plots and results:\\
