--- a/latex/report.tex
+++ b/latex/report.tex
@@ -86,6 +86,9 @@
 \renewcommand\listingscaption{Code Listing}
 \renewcommand\listoflistingscaption{List of Code Listings}
 
+% manual fixes for weird hyphenations
+\hyphenation{data-structure}
+
 \title{\ThesisTitle}
 
 \author{\vspace{1em}\\Sevag Hanssian \\
