--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -46,11 +46,80 @@ Section \ref{sec:inputrepresentation} will describe how the sliCQT was ported to
 
 In this section, we will describe the steps taken to port the sliCQT to PyTorch, new frequency scales added to the sliCQT, and the parameter search to find the optimal sliCQT for a music demixing application.
 
-First, Section \ref{sec:torchslicq} will show the modifications made to the library to compute the transform with PyTorch on the GPU, so that it can be used in the UMX neural network code. It will describe show how the PyTorch sliCQT data structure differs from the STFT.
+First, Section \ref{sec:stftslicqtcomp} will describe the differences between the output of the STFT and the sliCQT, and Section \ref{sec:torchslicqdatastructure} will describe how we chose an appropriate data structure to represent the sliCQT in PyTorch.
 
-Next, Section \ref{sec:improvelib} will show the addition of new frequency scales that are interesting for music applications that were described in Section \ref{sec:fscales}. Recall from Section \ref{sec:theorynsgt} that the NSGT/sliCQT can be thought of as filterbanks, and the chosen frequency scale is the most important parameter that defines the spectral representation of the musical signal, which influences the results of the downstream application.
+Next, Section \ref{sec:torchslicq} will show the modifications made to the library to compute the transform with PyTorch on the GPU, so that it can be used in the UMX neural network code. It will describe show how the PyTorch sliCQT data structure differs from the STFT.
+
+After that, Section \ref{sec:improvelib} will show the addition of new frequency scales that are interesting for music applications that were described in Section \ref{sec:fscales}. Recall from Section \ref{sec:theorynsgt} that the NSGT/sliCQT can be thought of as filterbanks, and the chosen frequency scale is the most important parameter that defines the spectral representation of the musical signal, which influences the results of the downstream application.
 
 Finally, in Section \ref{sec:slicqparamsrch}, we describe the parameter search that was run to choose frequency scales for the sliCQT with parameters that may perform best in a music demixing application. Section \ref{sec:fasterbsscupy} describes modifications made to the BSS eval metrics library to make it run faster on the GPU, with the aim to speed up the parameter search process.
+
+\subsubsection{Comparing the STFT to the sliCQT}
+\label{sec:stftslicqtcomp}
+
+In this section, we will compare and contrast the expected outputs of the STFT and sliCQT. This lays the groundwork for the chosen data structure to represent the sliCQT in PyTorch and its implementation which will be shown in upcoming sections.
+
+The STFT was described in Section \ref{sec:jointtfa} and its rectangular matrix output was shown in Figure \ref{fig:stftdiag}. We can also call the STFT a uniform frequency transform, because its frequency bins are uniformly or evenly spaced.
+
+The ragged shape of nonuniform frequency transforms like the NSGT was described in \ref{sec:raggedtf} and shown in Figure \ref{fig:raggedslicqt}. Figure \ref{fig:contraststftslicqt} shows the output of the STFT and an arbitrary ragged nonuniform frequency transform such as the NSGT side-by-side.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[STFT, a uniform time-frequency transform]{\includegraphics[width=0.5\textwidth]{./images-blockdiagrams/stftslicqtcmp1.png}}\\
+	\subfloat[A nonuniform time-frequency transform]{\includegraphics[width=0.65\textwidth]{./images-blockdiagrams/stftslicqtcmp2.png}}
+	\caption{The uniform STFT compared to a ragged nonuniform transform like the NSGT}
+	\label{fig:contraststftslicqt}
+\end{figure}
+
+The sliCQT was described in Section \ref{sec:theoryslicqt} as a realtime implementation of the NSGT, consisting of DFT coefficients computed for the input signal split into overlapping slices, shown in Figure \ref{fig:slicqtukeys}. The sliCQT needs each slice to be overlap-added with 50\% of its previous and next slice to produce a meaningful spectrogram, which was shown in Figure \ref{fig:slicqoverlaps}. This is a characteristic specific to the sliCQT, which outputs DFT coefficients grouped by slices. The NSGT, which is the ancestor of the sliCQT not designed for realtime processing, outputs the meaningful spectrogram directly without requiring any overlap-add. To oversimplify, we can say that the sliCQT outputs a ragged time-frequency transform similar to the NSGT for each slice of the input signal, and that to produce the final spectrogram for the entire signal, the transform of each slice need to be overlap-added with each other.
+
+We therefore note that there are two important and distinct characteristics that make working with the sliCQT different from the STFT:
+\begin{enumerate}
+	\item
+		The sliCQT computes ragged time-frequency transforms for each slice of length sllen of the input signal of length $N$, where $N > \text{sllen}$. Each slice of the sliCQT is a ragged spectrogram of DFT coefficients corresponding to that slice of the input signal. These slices need to be overlap-added by 50\% with their adjacent slices to create the final meaningful spectrogram. Note that each slice is ragged, due to the nonuniform time-frequency resolution.
+	\item
+		The overlap-added sliCQT spectrogram has the same ragged characteristic as each individual slice, due to its nonuniform frequency resolution.
+\end{enumerate}
+
+When designing a data structure for the sliCQT, each of these points has to be addressed separately. 
+
+Figure \ref{fig:raggedslicqtoverlapadd} shows the procedure of overlap-adding ragged adjacent slices of the sliCQT to produce the final overlap-added ragged transform.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{./images-blockdiagrams/overlapprocess.png}
+	\caption{Overlap-adding adjacent ragged slices of the sliCQT to produce the final ragged output. The red rectangle shows the overlap between slice 1 and 2, and the blue rectangle shows the overlap between slice 2 and 3.}
+	\label{fig:raggedslicqtoverlapadd}
+\end{figure}
+
+Note that the 50\% overlap is done independently for each of the time-frequency resolutions, since they have different temporal framerates and a different total number of frames per slice. For example, in the illustration above, we can see that the overlap for the lower green-colored block of frequency bins is two frames, or half of the total width of four frames, while the overlap for the upper pink-colored block of frequency bins or half the total width of six frames.
+
+\subsubsection{Choosing the data structure for the PyTorch sliCQT}
+\label{sec:torchslicqdatastructure}
+
+When choosing a data structure to represent the sliCQT in PyTorch, we must address the two characteristics described in the previous section, which are the adjacent slices that need to be overlap-added, and the raggedness of the slices and final overlap-added transform from the nonuniform time-frequency resolution.
+
+Due to limitations in the PyTorch library, jagged or ragged tensors (which are the equivalent of irregular or ragged matrices) are not yet supported.\footnote{\url{https://github.com/pytorch/pytorch/issues/25032}} That means that the ragged sliCQT cannot be represented by a single tensor, due to the irregular or ragged shape of the underlying matrix from the different frequency bin groupings by time-frequency resolution.
+
+Therefore, to represent the raggedness of the noniform time-frequency resolution, the data structure chosen was a list of tensors. The list data structure in Python was described in Section \ref{sec:pythonbasics}. Each element of the list will contain a tensor for the groups of frequency bins that have the same time-frequency resolution and can fit in the same tensor or matrix.
+
+As described in the previous section, each matrix in the list which have the same time-frequency resolution have their own independent overlap-add, computed by the width of their matrix, which is distinct due to its temporal framerate. Therefore, each element of the list will contain a 3D tensor. The three dimensions are frequency, time, and slice. The 3D tensor, when overlap-added, is converted to a 2D tensor with dimensions of time and frequency, which is equivalent to the 2D time-frequency dimensions of the STFT. Figure \ref{fig:3dslicqola2d} shows how the list of 3D tensors is converted to a list of 2D tensors by the overlap-add procedure.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=\textwidth]{./images-blockdiagrams/3dslicqola2d.png}
+	\caption{Overlap-adding the list of 3D tensors to create a list of 2D tensors in the sliCQT}
+	\label{fig:3dslicqola2d}
+\end{figure}
+
+The final data structure for the sliCQT in PyTorch is a list of 3D tensors. Each 3D tensor in the list represents a grouping of frequency bins by their common time-frequency resolution. The 3D tensors of the list are each independently overlap-added to produce 2D tensors which constitute the final time-frequency spectrogram representation of the audio signal. Figure \ref{fig:2dslicqolastft} shows the data structure of the overlap-added sliCQT compared to the data structure of the STFT.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.75\textwidth]{./images-blockdiagrams/2dslicqolastft.png}
+	\caption{The overlap-added list of 2D tensors representing the sliCQT spectrogram, compared to the single 2D tensor representing the STFT spectrogram}
+	\label{fig:2dslicqolastft}
+\end{figure}
 
 \subsubsection{Computing the sliCQT on the GPU with PyTorch}
 \label{sec:torchslicq}
@@ -62,21 +131,6 @@ The reference NSGT/sliCQT library uses NumPy, a CPU-based Python numerical compu
 The line-profiler\footnote{\url{https://pypi.org/project/line-profiler/}} package for Python prints a line-by-line output of the execution times of Python functions, and it was used to find performance hotspots and bottlenecks in the NSGT library. All NumPy functions and other non-GPU code was replaced with their PyTorch equivalents. To the user, the only difference was the addition of a \Verb#device# parameter to the \Verb#NSGT# and \Verb#NSGT_sliced# classes, which are the NSGT and sliCQT respectively. The choices of device are PyTorch device strings, and it defaults to the value \Verb#device="cpu"#. Using \Verb#device="cuda"# allows one to select their NVIDIA GPU. In practice, any device supported by PyTorch is also supported.
 
 Many internal methods, functions, and utilities were modified during the port to PyTorch, and each in turn was also modified to take a \Verb#device# parameter. As these are internal to the library and not intended to be used directly by the end user, they won't be described here.
-
-After the port to PyTorch, the sliCQT can be referred to as ``ragged'' or ``jagged,'' from its non-rectangular shape. As was shown in Figure \ref{fig:raggedslicqt} in Section \ref{sec:raggedtf}, frequency bins that share the same time resolution are grouped together in a rectangular matrix. This results in a list of tensors or matrices, where each tensor contains a block of frequency bins that share the same time resolution, and thus have the same length of time coefficients.
-
-In Section \ref{sec:theoryslicqt}, the sliCQT was described to return slices of time-frequency coefficients that have a 50\% overlap between adjacent slices. The sliCQT is therefore a 3D data structure with dimensions $\text{slice} \times \text{frequency} \times \text{time-in-slice}$. Overlap-adding the slices is necessary to generate a 2D spectrogram with dimensions $\text{frequency} \times \text{time}$ like the STFT.
-
-The next addition to the sliCQT utilities was to include an overlap-add utility function, called \Verb#overlap_add_slicq#,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/xumx_slicq/transforms.py\#L14}} where the overlap width is automatically inferred from the shape of the transform. Figure \ref{fig:slicqt3d} shows the ragged shape of the PyTorch sliCQT in its 3D and 2D overlap-added forms, and how these compare to the data structure of the STFT.
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[3D sliCQT before overlap-add]{\includegraphics[width=0.65\textwidth]{./images-blockdiagrams/slicq3ddatastructure.png}}\\
-	\subfloat[2D sliCQT after overlap-add]{\includegraphics[width=0.85\textwidth]{./images-blockdiagrams/slicq2ddatastructure.png}}\\
-	\subfloat[2D STFT]{\includegraphics[width=0.35\textwidth]{./images-blockdiagrams/stft2ddatastructure.png}}
-	\caption{Different temporal framerates per groups of frequency bins in the sliCQT, compared to the STFT}
-	\label{fig:slicqt3d}
-\end{figure}
 
 Due to requirement of the 50\% overlap-add to create a meaningful spectrogram, the overlap-add utility is accompanied with a spectrogram plotting implementation.  The spectrogram utility function\footnote{\url{https://github.com/sevagh/nsgt/blob/main/nsgt/plot.py}} uses the matplotlib\footnote{\url{matplotlib.org/}} library functions pcolormesh\footnote{\url{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.pcolormesh.html}} and colorbar\footnote{\url{https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.colorbar.html}} in its implementation.
 
